# web-supabase-rag

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
config/: config.py  cors.py
db/: supabase_client.py
services/: chat_history.py  db_check.py  document.py  history.py  ingestion.py  models.py  qa.py  schemas.py  streaming.py  vector_store.py
