[project]
name = "RAG Supabase web API"
version = "0.1.0"
description = "RAG service using Supabase vector store and OpenAI API"
requires-python = ">=3.13,<4.0"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "langchain",
  "langchain-community",
  "langchain-openai",
  "supabase",
  "openai",
  "pypdf",
  "sqlmodel",
  "python-multipart",
  "greenlet",
  "pgvector",
  "postgrest",
]

[tool.uv]
dev-dependencies = [
  "pytest<8.0.0,>=7.4.3",
  "mypy<2.0.0,>=1.8.0",
  "ruff<1.0.0,>=0.2.2",
  "pre-commit<4.0.0,>=3.6.2",
  "coverage<8.0.0,>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py313"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # pyflakes
  "I",     # isort
  "B",     # flake8-bugbear
  "C4",    # flake8-comprehensions
  "UP",    # pyupgrade
  "ARG001" # unused args in functions
]
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in defaults
  "W191",  # indentation contains tabs
  "B904",  # raising without `from` for HTTPException
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
